argocd/frigate/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Frigate
    gethomepage.dev/icon: frigate
    gethomepage.dev/description: "A complete and local NVR designed for Home Assistant\
      \ with AI object detection."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=frigate
  labels:
    app.kubernetes.io/instance: frigate-app
  name: httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - frigate.yanello.net
  rules:
    - backendRefs:
        - name: frigate
          namespace: frigate
          port: 8971
